Author: Matthew Good <trac@matt-good.net>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

acct_mgr-0.4 (not yet released) - branch 0.11
 resolved issues
 * #4677: Admin based chaining HtDigestStore & HtPasswdStore breaks config
   by adding dedicated options 'htdigest_file' and 'htpasswd_file'
 * #8685: User deletion ordering breaks 'deleted' notification for SessionStore
 * #8791: Obsolete patch needed for authentication against Jira
   by adding sha256/sha512 hash support (needs `passlib` or extended `crypt`)
 * #8990: HtPasswdStore and SessionStore with HtPasswdHashMethod share option
   by adding dedicated options 'db_htpasswd_hash_type' and 'db_htdigest_realm'
 * #9079: PostgreSQL: Database error when creating new user with attributes
 * #9139: SvnServePasswordStore and case sensitivity
 * #9246: InternalError when refresh_passwd = true
 * #9252: All session attributes are deleted when user logs in first time
 * #9547: Option `persistent_sessions` is not working in `0.4dev-r10747`
 * #10023: SQL Injection in acct_mgr.api.AccountManager.lastseen()
 * #10028: Account delete does not purge user's auth cookie
 * #10123: Registration with EmailVerification should instruct more clearly
 * #10204: Users can delete their email address even when verify_email=true
 * #10276: "Unknown preference panel" when logging out from account tab
 * do AccountManager class API cleanup by moving db access to model layer
 * prevent duplicate action entries in Trac core permission select box
 * add unit tests i.e. for hash creation and re-written registration checks
   to significantly extend code coverage

 new features
 * #874: Add new fields to register form and a registration validation system
 * #9618: HttpAuthStore authentication enhancement
   by allowing a relative URL for `authentication_url` configuration option
 * #9676: Incorporate optional Single-Sign-On functionality
 * #9852: Embed some user information in TracWiki